--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1437,6 +1437,7 @@ a:focus {
 }
 .drop-down-menu ul li {
   display: flex;
+  cursor: pointer;
   justify-content: center;
   align-items: center;
   height: 100%;
@@ -1467,4 +1468,43 @@ a:focus {
 }
 .mobile-menu .navbar-nav {
   margin: 0;
+}
+.web-drop-down-menu {
+  position: relative;
+}
+.web-drop-down-menu ul {
+  display: none;
+  list-style: none;
+  padding: 1rem 0;
+  min-width: 40px;
+  position: absolute;
+  /* background-color: white; */
+  border-radius: 1rem;
+  width: 100%;
+}
+.web-drop-down-menu ul li {
+  background-color: white;
+  margin: 0;
+  padding: 1rem 0;
+  cursor: pointer;
+  border-radius: 50px;
+}
+/* .web-drop-down-menu ul li:hover::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 999999999px;
+  padding: 5px;
+  background: linear-gradient(to bottom, #00d1ff, #fda50f);
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: destination-out;
+  mask-composite: exclude;
+} */
+.web-drop-down-menu:hover ul {
+  display: block;
 }
