--- a/client/src/index.css
+++ b/client/src/index.css
@@ -121,7 +121,6 @@ ul.navbar-nav li a::before {
   margin-top: -60px;
   display: flex;
   justify-content: center;
-  height: 60vh;
   padding-left: 40px;
   flex-direction: column;
   align-items: flex-start;
@@ -133,7 +132,7 @@ ul.navbar-nav li a::before {
   opacity: 0.6;
    height: auto;
   width: 100%;
-  margin-top: 30px;
+  margin-top: 36px;
 }
 .bannerImage img {
   max-width: 100%;
@@ -970,6 +969,7 @@ ul.footer-nav a {
   .homepage .landing-sections {
    height: 550px;
   }
+
 }
 @media only screen and (max-width: 991px) {
   .p {
@@ -1016,9 +1016,6 @@ ul.footer-nav a {
   }
   .image-container {
     margin: 0;
-  }
-  .class-room {
-    width: 80%;
   }
   .sections {
     margin-top: 100px;
@@ -1072,18 +1069,18 @@ ul.footer-nav a {
 }
 @media (max-width:767px) and (min-width:575px) {
   .homepage .landing-sections .content-section, .homepage .landing-sections {
-    min-height: 500px;
+    min-height: 650px;
   }
 
 }
-@media (max-width:599px) and (min-width:800px) {
+@media (max-width:575px) and (min-width:767px) {
   .bannerImage img {
     max-width: 100%;
     margin-left: 501%;
     padding-top: 44px;
 }
 }
-@media only screen and (max-width: 797px) {
+@media only screen and (max-width: 767px) {
   .team {
     width: 200px;
   }
@@ -1098,7 +1095,11 @@ ul.footer-nav a {
   }
 
   .contents {
-    width: 26%;
+    width: auto;
+    padding-left: 0;
+    text-align: center;
+    align-items: center;
+    margin-top: 0;
   }
   .content-box {
     padding: 15px;
@@ -1141,7 +1142,7 @@ ul.footer-nav a {
 }
 @media (max-width:767px) and (min-width:576px) {
   .class-room {
-    bottom: 145px;
+    bottom: 20px;
     padding: 20px;
   }
 }
@@ -1233,7 +1234,7 @@ ul.footer-nav a {
     /* width: 100%; */
     text-align: center;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 30px;
   }
   .homepage .contents::after {
     right: 0;
@@ -1253,7 +1254,7 @@ ul.footer-nav a {
   }
   .homepage .landing-sections .content-section,
   .homepage .landing-sections {
-    height: 500px;
+    height: 550px;
   }
   .image-container {
     width: 100%;
@@ -1297,23 +1298,24 @@ ul.footer-nav a {
     margin-bottom: 2px;
   }
 }
-
+@media (max-width:400px) and (min-width:335px) {
+  .class-room {
+    padding: 18px !important;
+  }
+}
 @media only screen and (max-width: 575px) {
   .class-room {
     bottom: -80px;
-    padding: 20px;
+    padding: 12px;
+    width: 95%;
   }
-  .advance {
-    margin-top: 50px;
-  }
-.bannerImage img {
-    max-width: 100%;
-    padding-top: 44px;
-}
+
   .science {
     margin-top: 125px;
   }
-
+  .bannerImage img {
+    max-width: 100%;
+}
   .navbar-brand > img {
     display: block;
     margin: 0 auto;
@@ -1636,8 +1638,9 @@ ul.small-device-ul a:hover {
 @media only screen and (min-device-width: 320px) and (max-device-width: 767px) {
   .bannerImage {
      height: 10%;
-     padding-top: 16px;
+     padding-top: 0px;
     width: 100%;
+    margin-top: -20px;
   }
   .custom-btn {
     min-width: 97px;
@@ -1656,7 +1659,7 @@ ul.small-device-ul a:hover {
       font-size: 4.4vw !important;
  }
   .class-room h2 {
-      font-size: 25px !important;
+      font-size: 20px !important;
  }
   .class-room p {
       line-height: 180%;
@@ -1664,9 +1667,6 @@ ul.small-device-ul a:hover {
  }
   .courses{
       margin-top: 70px !important;
- }
-  .advance {
-      margin-top: -66px !important;
  }
   .cources h2 {
       margin-top: 40px !important;
@@ -1838,14 +1838,12 @@ ul.small-device-ul a:hover {
       line-height: 150%;
  }
   .advance{
-      margin-top: -235px;
-      margin-left: 24px;
+      margin-top: -35px;
+      margin-left: 4px;
  }
  .contents {
-  width: 9%;
+  width: 35%;
 }
- .bannerImage {
-  margin-top: -80px;}
 
   .short-content h2{
       padding-top: 40px;
@@ -1853,15 +1851,11 @@ ul.small-device-ul a:hover {
   .map-height{
       margin-left: -52px;
  }
-  .navbar-nav{
+  /* .navbar-nav{
       flex-direction: unset !important;
       font-variant: all-petite-caps;
       margin: 32px -43px 29px -121px !important;
-     /* margin-top: -110px;
-      position: relative;
-      z-index: 1;
-      */
- }
+ } */
   .contents h1 {
       margin-top: -14px;
  }
@@ -1883,26 +1877,6 @@ ul.small-device-ul a:hover {
   margin-bottom: 5px;
 }
 
-/* Portrait*/
-/* @media only screen and (min-device-width: 1024px) and (max-device-height: 1366px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
-  .navbar-nav {
-    margin: 8px -36px -33px -115px !important;
-}
-.homepage .contents::after {right: -561px;}
-.contents h1 {
-  margin-top: -247px;
-  margin-left: 41px;
-}
-.contents a {
- 
-  margin-left: 41px;
-}
-.class-room{
-  padding-top: 59px;
-}
-
-}
- */
  @media (max-width:1199px) and (min-width:992px) {
   .class-room {
     bottom: 50px;
@@ -1910,6 +1884,19 @@ ul.small-device-ul a:hover {
  }
  @media (max-width:991px) and (min-width:767px) {
   .class-room {
-    bottom: -50px;
+    bottom: -48px;
   }
  }
+@media (max-width:991px) {
+  .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
+    width: 100%;
+    margin: auto;
+  }
+  .navbar-brand>img {
+    margin: auto;
+    width: 200px;
+  }
+  .log {
+    margin-top: 0;
+  }
+}
